--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         improver. He is always diving into new frameworks and languages, or creating his own.</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">Brendan's favorite framework experience includes:</p>
+                    <p class="lead">Brendan's favorite frameworks to work with are:</p>
                     <ul class="lead">
                         <li>Unreal Engine</li>
                         <li>Unity</li>
@@ -262,12 +262,8 @@
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i
-                            class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/brendanboss/"><i
                             class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
@@ -348,10 +344,10 @@
                                             href="https://github.com/LikeTheBossOne/2DGameEngine">Github</a>.
                                         <br />
                                         To start the games, you will need to first run the EngineServer, and then the
-                                        Client. Both games are networked and fully LAN multiplayer!
+                                        Client. Both games are networked and fully LAN multiplayer.
                                         <br />
-                                        I suggest playing the Asteroids game and looking at its code because it is more
-                                        complete and actually a full game!
+                                        I suggest playing Asteroids and looking at its code because it is a
+                                        full game.
                                     </p>
 
                                     <h3>
@@ -407,7 +403,7 @@
                                     <br />
                                     <p class="modal-par">
                                         I am linking the client and server code because they are too long to put
-                                        on this page. But you should check it out! <a
+                                        on this page. <a
                                             href="https://github.com/LikeTheBossOne/2DGameEngine/blob/main/EngineClient/main.cpp">Client</a>
                                         <a
                                             href="https://github.com/LikeTheBossOne/2DGameEngine/blob/main/EngineServer/main.cpp">Server</a>
@@ -797,8 +793,8 @@
                                     <p class="modal-par">
                                         This is a personal project I started after graduation from college as a
                                         prototype for an Multiplayer Open World RPG. I started this project to continue
-                                        learning Unreal Engine and sharpen my skills. It is still in-process but still
-                                        has some cool stuff. Feel free to download the executable from <a
+                                        learning Unreal Engine and sharpen my skills. Feel free to download the
+                                        executable from <a
                                             href="https://drive.google.com/file/d/1fgUglq2pDHThpSY0xvvziWWI31i-OvIl/view?usp=sharing">Drive</a>
                                         or view the repository on <a
                                             href="https://github.com/LikeTheBossOne/AdventOfTheMystics">Github</a>
@@ -809,7 +805,7 @@
                                     <p class="modal-par">
                                         This project is implemented using C++ in combination with Blueprints. I usually
                                         prototype ideas in a mix of blueprints and C++ and then convert my projects to
-                                        be majority C++ because C++ is more fun, and it is faster.
+                                        be majority C++ over time.
                                     </p>
 
                                     <p class="modal-par">
@@ -941,8 +937,7 @@
                                         recognition, and they work by ensuring that no point x is inside of the
                                         circumcircle created by connecting points a, b, and c into a triangle.
                                     </p>
-                                    <img
-                                        src="https://lh3.googleusercontent.com/proxy/HVS00WwXgr9_l9XV8sFJLbT5uvQEqzpieL7gq-ipf2oT28Vf8-y-U5mk8gkCsNBeu-XQ6oxf3pvQjwUuaSx1lgUtJgDY">
+                                    <img style="width: 60%;" src="assets/img/portfolio/delaunay.png">
                                     <br />
                                     <br />
                                     <p class="modal-par">
