Adding professional section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                            href="#portfolio">Portfolio</a></li>
+                        href="#portfolio">Portfolio</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                            href="#about">About</a></li>
+                        href="#professional">Professional</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                            href="#contact">Contact</a></li>
+                        href="#about">About</a></li>
                 </ul>
             </div>
         </div>
@@ -62,10 +62,10 @@
         </div>
     </header>
     <!-- Portfolio Section-->
-    <section class="page-section portfolio" id="portfolio">
+    <section class="page-section-short portfolio" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+            <h2 class="page-section-short-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -173,6 +173,54 @@
             </div>
         </div>
     </section>
+    <!-- Professional Section-->
+    <section class="page-section professional" id="professional">
+        <div class="container">
+            <!-- Portfolio Section Heading-->
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Professional Credits</h2>
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div class="row justify-content-center">
+                <div style="text-align: center; height: 63px;">
+                    <h2 style="line-height: 63px;">
+                        Call of Duty: Modern Warfare
+                    </h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div style="text-align: center; height: 63px;">
+                    <h2 style="line-height: 63px;">
+                        Call of Duty: Warzone Caldera
+                    </h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div style="text-align: center; height: 63px;">
+                    <h2 style="line-height: 63px;">
+                        Call of Duty: Modern Warfare II
+                    </h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div style="text-align: center; height: 63px;">
+                    <h2 style="line-height: 63px;">
+                        Call of Duty: Warzone 2
+                    </h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div style="text-align: center; height: 63px;">
+                    <h2 style="line-height: 63px;">
+                        Call of Duty: Modern Warfare III
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- About Section-->
     <section class="page-section bg-primary text-white mb-0" id="about">
         <div class="container">
@@ -192,11 +240,11 @@
                         improver. He is always diving into new frameworks and languages, or creating his own.</p>
                 </div>
                 <div class="col-lg-4 mr-auto">
-                    <p class="lead">Brendan's favorite libraries and engines to work with are:</p>
+                    <p class="lead">Brendan's favorite frameworks and engines to work with are:</p>
                     <ul class="lead">
                         <li>EnTT ECS Library</li>
                         <li>Unreal Engine</li>
-                        <li>Unity</li>
+                        <li>OpenGL</li>
                     </ul>
                 </div>
             </div>
@@ -223,9 +271,9 @@
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">About Brendan</h4>
                     <p class="lead mb-0">
-                        Brendan is a Software Developer who
-                        is passionate about
-                        Game Development and Learning.
+                        Brendan is a Gameplay Programmer at
+                        Raven Software, working on the
+                        Call of Duty franchise.
                     </p>
                 </div>
             </div>
